
                              Kiji Scoring Release Notes
Version 0.5.0
    * SCORE-77, SCORE-74. KijiScoring now properly releases all Kiji resources.
        FreshKijiTableReaders and KijiFreshnessManagers must be closed to release resources.
    * SCORE-76. FreshTool's --help option no longer requires a meaningless --do flag.

Version 0.4.0
  * SCORE-61. Resolve race conditions in InternalFreshKijiTableReader
  * SCORE-69. Local FreshKijiTableReader now creates only one table connection for all write
      operations.
  * SCORE-54. Writing using the ProducerContext in setup and cleanup will now produce an
      UnsupportedOperationException.  If you wish to write during these methods, use a
      KijiTableWriter instead.
  * SCORE-32. NewerThan now exposes a getter getNewerThanTimeInMillis() to retrieve the configured
      time before which data is considered stale.
  * SCORE-52. FreshTool now accepts File paths for policy state using the --policy-state-file flag.
  * SCORE-27. PolicyContext now supports a getStore(String) operation so that FreshnessPolicys can
      access KeyValue stores in calls to isFresh().

Version 0.3.0
  * SCORE-44. Producer output from freshened get() requests are now committed atomically based on
      the 'allow partial freshness' rule specified during table creation.  If partial freshness is
      allowed each producer will commit all of its writes atomically after produce() returns.  If
      partial freshness is not allowed, all writes will be cached until all producers associated
      with the same request have finished.  Partial freshness requires a separate table connection
      for each producer and does not guarantee that the output of one producer will not be used as
      input to another.  Given the high cost of table connections, partial freshening is not
      recommended and is disabled by default.

Version 0.2.0
  * SCORE-46. Freshness policies attached to qualified columns in map type families will now be